stylesheet/redem-reward-popup.css
#redeem-v2 #details .description {
    border-bottom: none !important;
}

#redeem-v2 .additional-images .image-thumb:first-of-type {
    display: none !important;
}

#redeem-v2 h2 { 
    display: none !important;
}

.widget .header { 
    background-color: white !important;
    border-bottom: none !important;
    top: 15px !important;
}

.widget .header h1, .widget .header h3 { 
    color: black !important;
    font-family: 'Effra Heavy', sans-serif !important;
    font-size: 20px !important;
    text-transform: capitalize !important;
}

#redeem-v2 .numeric-details .row .label {
    font-size: 20px !important;
    font-family: 'Effra Heavy', sans-serif !important;
}

#redeem-v2 .numeric-details .row span { 
    font-size: 18px !important;
    font-family: 'Effra Medium', sans-serif !important;
}

#redeem-v2 .not-enough-points-container p { 
    font-size: 16px !important;
    font-family: 'Effra Medium', sans-serif !important;
}

#redeem-v2 .quantity-remaining {
    display: none !important;
}

#redeem-v2 #review .buttons {
    text-align: left !important;
    width: 40% !important;
}

#redeem-v2 #review .buttons .btn.btn-secondary, #redeem-v2 #review .buttons a.btn.btn-secondary {
    background-color: #FFF !important;
    color: #00Af41 !important;
    border: 1px solid #00Af41 !important;
    border-radius: 4px !important;
    float: right !important;
    text-transform: capitalize !important;
    margin-top: 5px !important;
}

#redeem-v2 #review .buttons .btn.btn-danger, #redeem-v2 #review .buttons a.btn.btn-danger {
    border-bottom-width: 2px !important;
    border-radius: 4px !important;
    margin: 5px !important;
    text-transform: capitalize !important;
}

#poll-v2 .description {
    display: none !important;
}

#poll-v2 hr {
    border: none !important;
}

#poll-v2 .question-container .question-text { 
    margin: auto !important;
    font-size: 18px !important;
    font-family: 'Effra Light', sans-serif !important;
}

#poll-v2 .question-type-radio label.answer-option-wrapper {
    font-size: 16px !important;
    font-family: 'Effra Medium', sans-serif !important;
    margin: 15px 0 !important;
}

#poll-v2 .submit-container .points {
    font-size: 18px !important;
    font-family: 'Effra Medium', sans-serif !important;
}

#poll-v2 .submit-container button { 
    font-size: 24px !important;
    font-family: 'Effra Heavy', sans-serif !important;
    padding: 13px 36px !important;
    border-radius: 4px !important;
}

.dl.form.submit .btn {
    border-radius: 4px !important;
    margin: 5px !important;
    text-transform: capitalize !important
}

.close-container .btn.btn-secondary, a.btn.btn-secondary {
    background-color: #FFF !important;
    color: #00Af41 !important;
    border: 1px solid #00Af41 !important;
    border-radius: 4px !important;
    text-transform: capitalize !important;
}

#redeem-v2 .not-enough-points-container p {
    font-style: normal;
}

#redeem-v2 .numeric-details .row span {
    font-size: 16px !important;
}

#redeem-v2 .numeric-details .row+.row {
    margin-top: 20px !important;
}

#redeeem-v2 .container {
    padding-bottom: 0px !important;
}

.widget .container {
    padding: 60px 10 0px 10px !important
}

.explain-redeem-success .confirmation-sent-to, .explain-redeem-success .no-emphasis:last-of-type, #redeem-v2 #confirmation .address { 
    display: none; 
}

#redeem-v2 #review .email-address-info { 
    display: none;
}

